--- a/portal-frontend/src/app/features/public/notice-of-intent/submission/roso-details/roso-details.component.html
+++ b/portal-frontend/src/app/features/public/notice-of-intent/submission/roso-details/roso-details.component.html
@@ -45,63 +45,82 @@
     ></app-no-data>
   </div>
 
-  <div class="grid-1"></div>
-  <div class="grid-2">
-    <strong>Soil to be Removed</strong>
-  </div>
-  <div class="grid-1"><strong>Volume</strong></div>
-  <div class="grid-2">
-    {{ noiSubmission.soilToRemoveVolume }}
-    <span *ngIf="noiSubmission.soilToRemoveVolume">m<sup>3</sup></span>
-    <app-no-data *ngIf="!noiSubmission.soilToRemoveVolume"></app-no-data>
-  </div>
-  <div class="grid-1"><strong>Area</strong></div>
-  <div class="grid-2">
-    {{ noiSubmission.soilToRemoveArea }} <span *ngIf="noiSubmission.soilToRemoveArea">ha</span>
-    <app-no-data *ngIf="!noiSubmission.soilToRemoveArea"></app-no-data>
-  </div>
-  <div class="grid-1"><strong>Maximum Depth</strong></div>
-  <div class="grid-2">
-    {{ noiSubmission.soilToRemoveMaximumDepth }}
-    <span *ngIf="noiSubmission.soilToRemoveMaximumDepth">m</span>
-    <app-no-data *ngIf="!noiSubmission.soilToRemoveMaximumDepth"></app-no-data>
-  </div>
-  <div class="grid-1"><strong>Average Depth</strong></div>
-  <div class="grid-2">
-    {{ noiSubmission.soilToRemoveAverageDepth }}
-    <span *ngIf="noiSubmission.soilToRemoveAverageDepth">m</span>
-    <app-no-data *ngIf="!noiSubmission.soilToRemoveAverageDepth"></app-no-data>
-  </div>
+  <div class="full-width soil-table">
+    <div></div>
+    <div class="subheading2">Soil to be Removed</div>
 
-  <div class="grid-1"></div>
-  <div class="grid-2">
-    <strong>Soil already Removed</strong>
-  </div>
-  <div class="grid-1"><strong>Volume</strong></div>
-  <div class="grid-2">
-    {{ noiSubmission.soilAlreadyRemovedVolume }}
-    <span *ngIf="noiSubmission.soilAlreadyRemovedVolume !== null">m<sup>3</sup></span>
-    <app-no-data *ngIf="noiSubmission.soilAlreadyRemovedVolume === null"></app-no-data>
-  </div>
-  <div class="grid-1"><strong>Area</strong></div>
-  <div class="grid-2">
-    {{ noiSubmission.soilAlreadyRemovedArea }}
-    <span *ngIf="noiSubmission.soilAlreadyRemovedArea !== null">ha</span>
-    <app-no-data *ngIf="noiSubmission.soilAlreadyRemovedArea === null"></app-no-data>
-  </div>
-  <div class="grid-1"><strong>Maximum Depth</strong></div>
-  <div class="grid-2">
-    {{ noiSubmission.soilAlreadyRemovedMaximumDepth }}
-    <span *ngIf="noiSubmission.soilAlreadyRemovedMaximumDepth !== null">m</span>
-    <app-no-data *ngIf="noiSubmission.soilAlreadyRemovedMaximumDepth === null"></app-no-data>
-  </div>
-  <div class="grid-1"><strong>Average Depth</strong></div>
-  <div class="grid-2">
-    {{ noiSubmission.soilAlreadyRemovedAverageDepth }}
-    <span *ngIf="noiSubmission.soilAlreadyRemovedAverageDepth !== null">m</span>
-    <app-no-data *ngIf="noiSubmission.soilAlreadyRemovedAverageDepth === null"></app-no-data>
-  </div>
+    <div class="subheading2">Volume</div>
+    <div>
+      {{ noiSubmission.soilToRemoveVolume }}
+      <span *ngIf="noiSubmission.soilToRemoveVolume !== null">m<sup>3</sup></span>
+      <app-no-data [*ngIf="noiSubmission.soilToRemoveVolume === null"></app-no-data>
+    </div>
 
+    <div class="subheading2">Area</div>
+    <div>
+      {{ noiSubmission.soilToRemoveArea }}
+      <span *ngIf="noiSubmission.soilToRemoveArea !== null">m<sup>2</sup></span>
+      <app-no-data [*ngIf="noiSubmission.soilToRemoveArea === null"></app-no-data>
+    </div>
+
+    <div class="subheading2">Maximum Depth</div>
+    <div>
+      {{ noiSubmission.soilToRemoveMaximumDepth }}
+      <span *ngIf="noiSubmission.soilToRemoveMaximumDepth !== null">m</span>
+      <app-no-data
+        *ngIf="noiSubmission.soilToRemoveMaximumDepth === null"
+      ></app-no-data>
+    </div>
+
+    <div class="subheading2">Average Depth</div>
+    <div>
+      {{ noiSubmission.soilToRemoveAverageDepth }}
+      <span *ngIf="noiSubmission.soilToRemoveAverageDepth !== null">m</span>
+      <app-no-data
+        *ngIf="noiSubmission.soilToRemoveAverageDepth === null"
+      ></app-no-data>
+    </div>
+
+    <div></div>
+    <div class="subheading2">Soil already Removed</div>
+
+    <div class="subheading2">Volume</div>
+    <div>
+      {{ noiSubmission.soilAlreadyRemovedVolume }}
+      <span *ngIf="noiSubmission.soilAlreadyRemovedVolume !== null">m<sup>3</sup></span>
+      <app-no-data
+        *ngIf="noiSubmission.soilAlreadyRemovedVolume === null"
+      ></app-no-data>
+    </div>
+
+    <div class="subheading2">Area</div>
+    <div>
+      {{ noiSubmission.soilAlreadyRemovedArea }}
+      <span *ngIf="noiSubmission.soilAlreadyRemovedArea !== null">m<sup>2</sup></span>
+      <app-no-data
+        *ngIf="noiSubmission.soilAlreadyRemovedArea === null"
+      ></app-no-data>
+    </div>
+
+    <div class="subheading2">Maximum Depth</div>
+    <div>
+      {{ noiSubmission.soilAlreadyRemovedMaximumDepth }}
+      <span *ngIf="noiSubmission.soilAlreadyRemovedMaximumDepth !== null">m</span>
+      <app-no-data
+        *ngIf="noiSubmission.soilAlreadyRemovedMaximumDepth === null"
+      ></app-no-data>
+    </div>
+
+    <div class="subheading2">Average Depth</div>
+    <div>
+      {{ noiSubmission.soilAlreadyRemovedAverageDepth }}
+      <span *ngIf="noiSubmission.soilAlreadyRemovedAverageDepth !== null">m</span>
+      <app-no-data
+        *ngIf="noiSubmission.soilAlreadyRemovedAverageDepth === null"
+      ></app-no-data>
+    </div>
+  </div>
+  
   <div class="subheading2 grid-1">Proposal Map / Site Plan</div>
   <div class="grid-double">
     <a *ngFor="let map of proposalMap" (click)="openFile(map.uuid)">
