--- a/portal-frontend/src/app/features/applications/application-details/naru-details/naru-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/naru-details/naru-details.component.html
@@ -183,38 +183,43 @@
       ></app-no-data>
     </div>
 
-    <div class="grid-1"></div>
-    <div class="subheading2 grid-double">Fill to be Placed</div>
-
-    <div class="subheading2 grid-1">Volume</div>
-    <div class="grid-double">
-      {{ _applicationSubmission.naruToPlaceVolume }}
-      <span *ngIf="_applicationSubmission.naruToPlaceVolume !== null">m<sup>3</sup></span>
-      <app-no-data [showRequired]="showErrors" *ngIf="_applicationSubmission.naruToPlaceVolume === null"></app-no-data>
-    </div>
-    <div class="subheading2 grid-1">Area</div>
-    <div class="grid-double">
-      {{ _applicationSubmission.naruToPlaceArea }}
-      <span *ngIf="_applicationSubmission.naruToPlaceArea !== null">m<sup>2</sup></span>
-      <app-no-data [showRequired]="showErrors" *ngIf="_applicationSubmission.naruToPlaceArea === null"></app-no-data>
-    </div>
-    <div class="subheading2 grid-1">Maximum Depth</div>
-    <div class="grid-double">
-      {{ _applicationSubmission.naruToPlaceMaximumDepth }}
-      <span *ngIf="_applicationSubmission.naruToPlaceMaximumDepth !== null">m</span>
-      <app-no-data
-        [showRequired]="showErrors"
-        *ngIf="_applicationSubmission.naruToPlaceMaximumDepth === null"
-      ></app-no-data>
-    </div>
-    <div class="subheading2 grid-1">Average Depth</div>
-    <div class="grid-double">
-      {{ _applicationSubmission.naruToPlaceAverageDepth }}
-      <span *ngIf="_applicationSubmission.naruToPlaceAverageDepth !== null">m</span>
-      <app-no-data
-        [showRequired]="showErrors"
-        *ngIf="_applicationSubmission.naruToPlaceAverageDepth === null"
-      ></app-no-data>
+    <div class="full-width soil-table">
+      <div></div>
+      <div class="subheading2">Fill to be Placed</div>
+  
+      <div class="subheading2">Volume</div>
+      <div>
+        {{ _applicationSubmission.naruToPlaceVolume }}
+        <span *ngIf="_applicationSubmission.naruToPlaceVolume !== null">m<sup>3</sup></span>
+        <app-no-data [showRequired]="showErrors" *ngIf="_applicationSubmission.naruToPlaceVolume === null"></app-no-data>
+      </div>
+  
+      <div class="subheading2">Area</div>
+      <div>
+        {{ _applicationSubmission.naruToPlaceArea }}
+        <span *ngIf="_applicationSubmission.naruToPlaceArea !== null">m<sup>2</sup></span>
+        <app-no-data [showRequired]="showErrors" *ngIf="_applicationSubmission.naruToPlaceArea === null"></app-no-data>
+      </div>
+  
+      <div class="subheading2">Maximum Depth</div>
+      <div>
+        {{ _applicationSubmission.naruToPlaceMaximumDepth }}
+        <span *ngIf="_applicationSubmission.naruToPlaceMaximumDepth !== null">m</span>
+        <app-no-data
+          [showRequired]="showErrors"
+          *ngIf="_applicationSubmission.naruToPlaceMaximumDepth === null"
+        ></app-no-data>
+      </div>
+  
+      <div class="subheading2">Average Depth</div>
+      <div>
+        {{ _applicationSubmission.naruToPlaceAverageDepth }}
+        <span *ngIf="_applicationSubmission.naruToPlaceAverageDepth !== null">m</span>
+        <app-no-data
+          [showRequired]="showErrors"
+          *ngIf="_applicationSubmission.naruToPlaceAverageDepth === null"
+        ></app-no-data>
+      </div>
     </div>
   </ng-container>
 
