--- a/portal-frontend/src/app/features/applications/application-details/roso-details/roso-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/roso-details/roso-details.component.html
@@ -40,77 +40,86 @@
     ></app-no-data>
   </div>
 
-  <div class="grid-1"></div>
-  <div class="subheading2 grid-double">Soil to be Removed</div>
+  <div class="full-width soil-table">
+    <div></div>
+    <div class="subheading2">Soil to be Removed</div>
 
-  <div class="subheading2 grid-1">Volume</div>
-  <div class="grid-double">
-    {{ _applicationSubmission.soilToRemoveVolume }}
-    <span *ngIf="_applicationSubmission.soilToRemoveVolume">m<sup>3</sup></span>
-    <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.soilToRemoveVolume"></app-no-data>
-  </div>
+    <div class="subheading2">Volume</div>
+    <div>
+      {{ _applicationSubmission.soilToRemoveVolume }}
+      <span *ngIf="_applicationSubmission.soilToRemoveVolume !== null">m<sup>3</sup></span>
+      <app-no-data [showRequired]="showErrors" *ngIf="_applicationSubmission.soilToRemoveVolume === null"></app-no-data>
+    </div>
 
-  <div class="subheading2 grid-1">Area</div>
-  <div class="grid-double">
-    {{ _applicationSubmission.soilToRemoveArea }} <span *ngIf="_applicationSubmission.soilToRemoveArea">ha</span>
-    <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.soilToRemoveArea"></app-no-data>
-  </div>
+    <div class="subheading2">Area</div>
+    <div>
+      {{ _applicationSubmission.soilToRemoveArea }}
+      <span *ngIf="_applicationSubmission.soilToRemoveArea !== null">m<sup>2</sup></span>
+      <app-no-data [showRequired]="showErrors" *ngIf="_applicationSubmission.soilToRemoveArea === null"></app-no-data>
+    </div>
 
-  <div class="subheading2 grid-1">Maximum Depth</div>
-  <div class="grid-double">
-    {{ _applicationSubmission.soilToRemoveMaximumDepth }}
-    <span *ngIf="_applicationSubmission.soilToRemoveMaximumDepth">m</span>
-    <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.soilToRemoveMaximumDepth"></app-no-data>
-  </div>
+    <div class="subheading2">Maximum Depth</div>
+    <div>
+      {{ _applicationSubmission.soilToRemoveMaximumDepth }}
+      <span *ngIf="_applicationSubmission.soilToRemoveMaximumDepth !== null">m</span>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="_applicationSubmission.soilToRemoveMaximumDepth === null"
+      ></app-no-data>
+    </div>
 
-  <div class="subheading2 grid-1">Average Depth</div>
-  <div class="grid-double">
-    {{ _applicationSubmission.soilToRemoveAverageDepth }}
-    <span *ngIf="_applicationSubmission.soilToRemoveAverageDepth">m</span>
-    <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.soilToRemoveAverageDepth"></app-no-data>
-  </div>
+    <div class="subheading2">Average Depth</div>
+    <div>
+      {{ _applicationSubmission.soilToRemoveAverageDepth }}
+      <span *ngIf="_applicationSubmission.soilToRemoveAverageDepth !== null">m</span>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="_applicationSubmission.soilToRemoveAverageDepth === null"
+      ></app-no-data>
+    </div>
 
-  <div class="grid-1"></div>
-  <div class="subheading2 grid-double">Soil already Removed</div>
+    <div></div>
+    <div class="subheading2">Soil already Removed</div>
 
-  <div class="subheading2 grid-1">Volume</div>
-  <div class="grid-double">
-    {{ _applicationSubmission.soilAlreadyRemovedVolume }}
-    <span *ngIf="_applicationSubmission.soilAlreadyRemovedVolume !== null">m<sup>3</sup></span>
-    <app-no-data
-      [showRequired]="showErrors"
-      *ngIf="_applicationSubmission.soilAlreadyRemovedVolume === null"
-    ></app-no-data>
-  </div>
+    <div class="subheading2">Volume</div>
+    <div>
+      {{ _applicationSubmission.soilAlreadyRemovedVolume }}
+      <span *ngIf="_applicationSubmission.soilAlreadyRemovedVolume !== null">m<sup>3</sup></span>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="_applicationSubmission.soilAlreadyRemovedVolume === null"
+      ></app-no-data>
+    </div>
 
-  <div class="subheading2 grid-1">Area</div>
-  <div class="grid-double">
-    {{ _applicationSubmission.soilAlreadyRemovedArea }}
-    <span *ngIf="_applicationSubmission.soilAlreadyRemovedArea !== null">ha</span>
-    <app-no-data
-      [showRequired]="showErrors"
-      *ngIf="_applicationSubmission.soilAlreadyRemovedArea === null"
-    ></app-no-data>
-  </div>
+    <div class="subheading2">Area</div>
+    <div>
+      {{ _applicationSubmission.soilAlreadyRemovedArea }}
+      <span *ngIf="_applicationSubmission.soilAlreadyRemovedArea !== null">m<sup>2</sup></span>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="_applicationSubmission.soilAlreadyRemovedArea === null"
+      ></app-no-data>
+    </div>
 
-  <div class="subheading2 grid-1">Maximum Depth</div>
-  <div class="grid-double">
-    {{ _applicationSubmission.soilAlreadyRemovedMaximumDepth }}
-    <span *ngIf="_applicationSubmission.soilAlreadyRemovedMaximumDepth !== null">m</span>
-    <app-no-data
-      [showRequired]="showErrors"
-      *ngIf="_applicationSubmission.soilAlreadyRemovedMaximumDepth === null"
-    ></app-no-data>
-  </div>
+    <div class="subheading2">Maximum Depth</div>
+    <div>
+      {{ _applicationSubmission.soilAlreadyRemovedMaximumDepth }}
+      <span *ngIf="_applicationSubmission.soilAlreadyRemovedMaximumDepth !== null">m</span>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="_applicationSubmission.soilAlreadyRemovedMaximumDepth === null"
+      ></app-no-data>
+    </div>
 
-  <div class="subheading2 grid-1">Average Depth</div>
-  <div class="grid-double">
-    {{ _applicationSubmission.soilAlreadyRemovedAverageDepth }}
-    <span *ngIf="_applicationSubmission.soilAlreadyRemovedAverageDepth !== null">m</span>
-    <app-no-data
-      [showRequired]="showErrors"
-      *ngIf="_applicationSubmission.soilAlreadyRemovedAverageDepth === null"
-    ></app-no-data>
+    <div class="subheading2">Average Depth</div>
+    <div>
+      {{ _applicationSubmission.soilAlreadyRemovedAverageDepth }}
+      <span *ngIf="_applicationSubmission.soilAlreadyRemovedAverageDepth !== null">m</span>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="_applicationSubmission.soilAlreadyRemovedAverageDepth === null"
+      ></app-no-data>
+    </div>
   </div>
 
   <div class="subheading2 grid-1">Describe the type of soil proposed to be removed.</div>
