--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/roso-details/roso-details.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/roso-details/roso-details.component.html
@@ -46,75 +46,87 @@
     ></app-no-data>
   </div>
 
-  <div class="grid-1"></div>
-  <div class="subheading2 grid-double">Soil to be Removed</div>
+  <div class="full-width soil-table">
+    <div></div>
+    <div class="subheading2">Soil to be Removed</div>
 
-  <div class="subheading2 grid-1">Volume</div>
-  <div class="grid-double">
-    {{ _noiSubmission.soilToRemoveVolume }}
-    <span *ngIf="_noiSubmission.soilToRemoveVolume">m<sup>3</sup></span>
-    <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilToRemoveVolume"></app-no-data>
+    <div class="subheading2">Volume</div>
+    <div>
+      {{ _noiSubmission.soilToRemoveVolume }}
+      <span *ngIf="_noiSubmission.soilToRemoveVolume !== null">m<sup>3</sup></span>
+      <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilToRemoveVolume === null"></app-no-data>
+    </div>
+
+    <div class="subheading2">Area</div>
+    <div>
+      {{ _noiSubmission.soilToRemoveArea }}
+      <span *ngIf="_noiSubmission.soilToRemoveArea !== null">m<sup>2</sup></span>
+      <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilToRemoveArea === null"></app-no-data>
+    </div>
+
+    <div class="subheading2">Maximum Depth</div>
+    <div>
+      {{ _noiSubmission.soilToRemoveMaximumDepth }}
+      <span *ngIf="_noiSubmission.soilToRemoveMaximumDepth !== null">m</span>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="_noiSubmission.soilToRemoveMaximumDepth === null"
+      ></app-no-data>
+    </div>
+
+    <div class="subheading2">Average Depth</div>
+    <div>
+      {{ _noiSubmission.soilToRemoveAverageDepth }}
+      <span *ngIf="_noiSubmission.soilToRemoveAverageDepth !== null">m</span>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="_noiSubmission.soilToRemoveAverageDepth === null"
+      ></app-no-data>
+    </div>
+
+    <div></div>
+    <div class="subheading2">Soil already Removed</div>
+
+    <div class="subheading2">Volume</div>
+    <div>
+      {{ _noiSubmission.soilAlreadyRemovedVolume }}
+      <span *ngIf="_noiSubmission.soilAlreadyRemovedVolume !== null">m<sup>3</sup></span>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="_noiSubmission.soilAlreadyRemovedVolume === null"
+      ></app-no-data>
+    </div>
+
+    <div class="subheading2">Area</div>
+    <div>
+      {{ _noiSubmission.soilAlreadyRemovedArea }}
+      <span *ngIf="_noiSubmission.soilAlreadyRemovedArea !== null">m<sup>2</sup></span>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="_noiSubmission.soilAlreadyRemovedArea === null"
+      ></app-no-data>
+    </div>
+
+    <div class="subheading2">Maximum Depth</div>
+    <div>
+      {{ _noiSubmission.soilAlreadyRemovedMaximumDepth }}
+      <span *ngIf="_noiSubmission.soilAlreadyRemovedMaximumDepth !== null">m</span>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="_noiSubmission.soilAlreadyRemovedMaximumDepth === null"
+      ></app-no-data>
+    </div>
+
+    <div class="subheading2">Average Depth</div>
+    <div>
+      {{ _noiSubmission.soilAlreadyRemovedAverageDepth }}
+      <span *ngIf="_noiSubmission.soilAlreadyRemovedAverageDepth !== null">m</span>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="_noiSubmission.soilAlreadyRemovedAverageDepth === null"
+      ></app-no-data>
+    </div>
   </div>
-
-  <div class="subheading2 grid-1">Area</div>
-  <div class="grid-double">
-    {{ _noiSubmission.soilToRemoveArea }} <span *ngIf="_noiSubmission.soilToRemoveArea">ha</span>
-    <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilToRemoveArea"></app-no-data>
-  </div>
-
-  <div class="subheading2 grid-1">Maximum Depth</div>
-  <div class="grid-double">
-    {{ _noiSubmission.soilToRemoveMaximumDepth }}
-    <span *ngIf="_noiSubmission.soilToRemoveMaximumDepth">m</span>
-    <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilToRemoveMaximumDepth"></app-no-data>
-  </div>
-
-  <div class="subheading2 grid-1">Average Depth</div>
-  <div class="grid-double">
-    {{ _noiSubmission.soilToRemoveAverageDepth }}
-    <span *ngIf="_noiSubmission.soilToRemoveAverageDepth">m</span>
-    <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilToRemoveAverageDepth"></app-no-data>
-  </div>
-
-  <div class="subheading1 full-width"></div>
-
-  <div class="grid-1"></div>
-  <div class="subheading2 grid-double">Soil already Removed</div>
-
-  <div class="subheading2 grid-1">Volume</div>
-  <div class="grid-double">
-    {{ _noiSubmission.soilAlreadyRemovedVolume }}
-    <span *ngIf="_noiSubmission.soilAlreadyRemovedVolume !== null">m<sup>3</sup></span>
-    <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilAlreadyRemovedVolume === null"></app-no-data>
-  </div>
-
-  <div class="subheading2 grid-1">Area</div>
-  <div class="grid-double">
-    {{ _noiSubmission.soilAlreadyRemovedArea }}
-    <span *ngIf="_noiSubmission.soilAlreadyRemovedArea !== null">ha</span>
-    <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilAlreadyRemovedArea === null"></app-no-data>
-  </div>
-
-  <div class="subheading2 grid-1">Maximum Depth</div>
-  <div class="grid-double">
-    {{ _noiSubmission.soilAlreadyRemovedMaximumDepth }}
-    <span *ngIf="_noiSubmission.soilAlreadyRemovedMaximumDepth !== null">m</span>
-    <app-no-data
-      [showRequired]="showErrors"
-      *ngIf="_noiSubmission.soilAlreadyRemovedMaximumDepth === null"
-    ></app-no-data>
-  </div>
-
-  <div class="subheading2 grid-1">Average Depth</div>
-  <div class="grid-double">
-    {{ _noiSubmission.soilAlreadyRemovedAverageDepth }}
-    <span *ngIf="_noiSubmission.soilAlreadyRemovedAverageDepth !== null">m</span>
-    <app-no-data
-      [showRequired]="showErrors"
-      *ngIf="_noiSubmission.soilAlreadyRemovedAverageDepth === null"
-    ></app-no-data>
-  </div>
-
   <div class="subheading2 grid-1">Proposal Map / Site Plan</div>
   <div class="grid-double">
     <a *ngFor="let map of proposalMap" (click)="openFile(map.uuid)">
